# CodeSherpa

./: .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml
codesherpa/: __init__.py  cli.py  config.py  db.py  embeddings.py  explanation.py  ingestion.py  llm.py  memory.py  navigation.py  parser.py  project.py  repo.py  retrieval.py  routing.py  web.py
db/: init.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: ChatPanel.svelte  (+7 more)
memory/: learnings.md
plans/: plan.md
specs/: ccspec.md  project.md  requirements-llm-tools.md  requirements-memory-management.md  requirements.md  task-01-project-setup.md  task-02-code-parsing.md  task-03-embedding-storage.md  task-04-semantic-retrieval.md  task-05-llm-explanations.md  task-06-project-management.md  task-07-web-interface.md  task-08-agent-memory.md  task-09-intelligent-navigation.md  task-10-ingestion-progress-api.md  task-11-projects-page.md  task-12-chat-ui.md  task-13-expanded-key-files.md  task-14-language-aware-deps.md  task-15-unified-classification.md  task-16-llm-tool-calling.md  task-17-memory-backend.md  task-18-memory-api-client.md  task-19-memory-page.md
tests/: test_cli.py  test_config.py  test_db.py  test_embeddings.py  test_explanation.py  test_ingestion.py  test_llm.py  test_memory.py  test_navigation.py  test_parser.py  test_project.py  test_repo.py  test_retrieval.py  test_routing.py  test_tool_calling.py  test_web.py
